Sun Dec 08 09:45:34 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Map_Manager.h:
        * ace/SString.h:
        * ace/Unbounded_Queue.h:
          Improved doxygen documentation

Sun Dec 08 09:37:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Set JAVADOC_AUTOBRIEF to NO in all doxygen config files. When
          only javadoc style documentation is used, only detailed documentation
          is generated.

Sun Dec 08 01:17:26 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Event_Handler.cpp: Fixed a typo.

Thu Dec  5 20:30:56 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Event_Handler.cpp: Updated the implementation of ACE_Event_Handler::read_adapter()
	  so that the code is consistent with the stated semantics.  Thanks to
	  Ron Muck <rlm@sdiusa.com> for the fix.

	* ace/OS_Dirent.inl (readdir_r): Enhanced the ACE_OS_Directn::readdir_r()
	  wrapper facade so that it returns 1 (i.e., "done") when an error
 	  occurs.  Thanks to Abhay Kulkarni <Abhay.Kulkarni@veritas.com>
 	  for reporting this.

Sat Dec  7 19:54:12 2002  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: For WinCE, define S_IFDIR and S_IFREG file mode masks.

Sat Dec 07 14:29:47 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ACE.cpp (format_hexdump): This change fixed the problem that
	  a character is missing when the last line has less than 16 bytes
	  or less to display.  Thanks to Terry Lao <terry@ec-tone.com> for
	  submitting the patch, and Johnny Willemsen
	  <jwillemsen@remedy.nl> for reviewing the change.

Fri Dec  6 23:58:47 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/CDR_Stream.cpp:
	* ace/CDR_Stream.i: Set good_bit_ to zero whenever the sanity
	  check for remaining length in the stream fails. Thanks to Jerry
	  D. De Master <jdemaste@rite-solutions.com> for pointing out the
	  problem.

	* ace/CDR_Array_Test.cpp: Extended the test to include test for